<resources>
    <string name="app_name">CarRentApp</string>
    <string name="discover_your_dream_car_here">Discover Your Dream Car Here</string>
    <string name="Description"><![CDATA[Several car brands and service providers focus\non offering a combination of comfort and\nhappiness (driving joy). ]]></string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you’ve\nbeen missed !</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="create_new_account">Create new account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="create_account">Create account</string>
    <string name="creating_an_account_so_you_can_explore_all_existing_car">Creating an account so you can\nexplore all existing car</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="welcome_john">Welcome John!</string>
    <string name="good_morning">Good morning!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search_car_here">Search car here</string>
    <string name="brand">Brand </string>
    <string name="all_cars">All Cars</string>
    <string name="car">Car</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="name">Name</string>
    <string name="john">John</string>
    <string name="name_email_com">name@email.com</string>
    <string name="create_a_password">Create a password</string>
    <string name="_012345678">012345678</string>
    <string name="submit">Submit</string>
</resources>