<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/background"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/creating_an_account_so_you_can_explore_all_existing_car"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="name"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/john"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/phone"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="phone"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/_012345678"
                android:inputType="phone"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="phone"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/name_email_com"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/password"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="18dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/create_a_password"
                android:inputType="textPassword"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="31dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/Primary600"
                android:fontFamily="@font/inter"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <TextView
                android:id="@+id/alreadyHaveAccountLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/Primary600"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>