<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/background"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="134dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login_here"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="77dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/welcome_back_you_ve_been_missed"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:layout_marginBottom="29dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="40dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/forgotPasswordLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/inter"
                    android:text="@string/forgot_your_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/Primary600"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/Primary600"
                android:fontFamily="@font/inter"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/not_a_member"
                        android:textColor="@color/TextSecondary"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/createAccountLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/register_now"
                        android:textColor="@color/Primary600"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>