<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/background"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:src="@drawable/carmodel"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="100dp">

        <TextView
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/discover_your_dream_car_here"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/Description"
            android:textAlignment="center"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>