<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/background"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/reset_your_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="368dp"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/Primary600"
                android:fontFamily="@font/inter"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>